# autoresearch-claude-code

./: .gitignore  CLAUDE.md  README.md  autoresearch.md  install.sh  train.py  uninstall.sh
.claude-plugin/: plugin.json
examples/: autoresearch.sh  models.py  obp-autoresearch.md  pyproject.toml  train.py
hooks/: autoresearch-context.sh
skills/autoresearch/: SKILL.md
